fixes spacing

--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,9 @@ a.highlighted-link:hover{
 }
 .q-a{
     text-align: center;
-    max-width: 900px;
+    max-width: calc(900px - var(--space) * 2);
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 nav ul li{
     padding: calc(var(--space)/2);
@@ -404,5 +406,8 @@ a.bold-button {
    }
    .intro-family{
         margin-top: calc(var(--space) * 7);
+    }
+    .q-a{
+        max-width: calc(100% - var(--space) * 2);
     }
 }
